--- a/HW3/CMakeLists.txt
+++ b/HW3/CMakeLists.txt
@@ -3,4 +3,4 @@ project(HW3)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(HW3 main.cpp symbolarray.cpp mywstring.cpp mywstring.h mystring.cpp mystring.h)
+add_executable(HW3 main.cpp symbolarray.h mywstring.cpp mywstring.h mystring.cpp mystring.h)
